<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.minebench</groupId>
    <artifactId>syncinv</artifactId>
    <version>0.6.4-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>SyncInv</name>

    <description>Bukkit plugin to sync inventories between multiple connected servers</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <minecraft.plugin.version>${project.version} ${buildDescription}</minecraft.plugin.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>minebench-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.10-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>6.0.54</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.lishid</groupId>
            <artifactId>openinvplugin</artifactId>
            <!--
            Note: currently there is a discrepancy between run and compile time version!
            Since OpenInv isn't able to publish anything else than it's API to maven, we remain
            on 5.1.1 to compile against.
            However, runtime dependency has moved on to 5.1.7+!
            -->
            <version>5.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
            <version>6.5.1.RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.themoep</groupId>
            <artifactId>minedown-adventure</artifactId>
            <version>1.7.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>static_build_number</id>
            <activation>
                <property>
                    <name>!env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildNumber>0</buildNumber>
                <buildDescription>(compiled at ${maven.build.timestamp})</buildDescription>
            </properties>
        </profile>
        <profile>
            <id>dynamic_build_number</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildNumber>${env.BUILD_NUMBER}</buildNumber>
                <buildDescription>(build ${env.BUILD_NUMBER})</buildDescription>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>${project.name}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <version>3.13.0</version>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <relocations>
                                <relocation>
                                    <pattern>io.lettuce</pattern>
                                    <shadedPattern>de.minebench.syncinv.lib.lettuce</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.netty</pattern>
                                    <shadedPattern>de.minebench.syncinv.lib.netty</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>reactor</pattern>
                                    <shadedPattern>de.minebench.syncinv.lib.reactor</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.reactivestreams</pattern>
                                    <shadedPattern>de.minebench.syncinv.lib.reactivestreams</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>de.themoep.minedown</pattern>
                                    <shadedPattern>de.minebench.syncinv.lib.minedown</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/unfiltered-resources</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
